--- a/cap1/Estilos/animations.css
+++ b/cap1/Estilos/animations.css
@@ -1,11 +1,4 @@
-
-
-#ex4 {
-	width: 800px;
-	margin: 0 auto;
-}
-
-img {
+img.todas {
 	height:118px;
 	width:80px;
 
@@ -18,7 +11,7 @@ img {
 	-o-transition: all 0.5s ease;
 }
 
- img:hover {
+ img.todas:hover {
 	-webkit-transform: rotate(-7deg);
 	-moz-transform: rotate(-7deg);
 	-o-transform: rotate(-7deg);
