--- a/cap1/Estilos/serie.css
+++ b/cap1/Estilos/serie.css
@@ -9,10 +9,10 @@ text-align: left;}
 float:left;}
 #debajo {
  position: absolute;
-  top: 350px; 
+  top: 400px; 
   right: 70px;}
- img {
+ img.poster {
   position: absolute;
-  top: 100px; 
+  top: 140px; 
   left: 1000px;
 }
